base-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboottest
  namespace: emisores
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboottest
      app.kubernetes.io/name: springboottest
  template:
    metadata:
      labels:
        app: springboottest
        app.kubernetes.io/name: springboottest
    spec:
      containers:
      - name: springboottest
        image: 654654328400.dkr.ecr.us-east-2.amazonaws.com/nb/testservicio:latest-#{codepipeline.PipelineExecutionId}
        imagePullPolicy: Always
      dnsPolicy: ClusterFirst
