service-ingre.yml
apiVersion: v1
kind: Service
metadata:
  namespace: backend
  name: springboottest-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: springboottest
