service.yml
apiVersion: v1
kind: Service
metadata:
  name: springboottest-service
  namespace: emisores
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "alb"
spec:
  type: LoadBalancer
  selector:
    app: springboottest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
